# style_transfer

./: .dockerignore  .gitignore  Makefile  README.md  app.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  cicd.yml
cli/: export_to_onnx.py
docker/: Dockerfile  docker-compose.yml
inference/: loader.py  postprocessing.py  preprocessing.py
models/: anime.py  transform_net.py
tests/: conftest.py  test_export_to_onnx.py  test_loader.py  test_model.py  test_pipeline.py  test_postprocessing.py  test_preprocessing.py
tools/: export_to_onnx.py  model_loader.py
